Update old dependencies from tuto index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three.js Cube with Shaders</title>
     <script type="module">
-        import * as THREE from 'https://threejsfundamentals.org/threejs/resources/threejs/r132/build/three.module.js';
-        import { OrbitControls } from 'https://threejsfundamentals.org/threejs/resources/threejs/r132/examples/jsm/controls/OrbitControls.js';
+        import * as THREE from 'https://unpkg.com/three@r160/build/three.module.js';
+        import { OrbitControls } from 'THREE/addons/controls/OrbitControls.js';
 
         const vertexShaderSource = `
             void main() {
